--- a/src/Runner/Runner.csproj
+++ b/src/Runner/Runner.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.13.9" />
+    <PackageReference Include="Bogus" Version="34.0.2" />
   </ItemGroup>
 
 </Project>
